--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,134 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.header-color {
+  background: #232526;  
+  background: -webkit-linear-gradient(to right, #414345, #232526);  
+  background: linear-gradient(to right, #414345, #232526); 
+}
+
+.landing-grid {
+  /* background: #232526;  
+  background: -webkit-linear-gradient(to right, #414345, #232526);  
+  background: linear-gradient(to right, #414345, #232526);  */
+  background-color: snow;
+  text-align: center;
+  position: fixed;
+  top: 5;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.avatar-img {
+  height: 400px;
+  width: 300px;
+  padding-top: 5em;
+}
+
+.banner-text {
+  background-color: snow;
+  opacity: 0.8;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+  padding-top: 1.5em;
+}
+
+.banner-text {
+  font-size: 66px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+}
+
+.banner-text hr {
+  border-top: 5px dotted white;
+  width: 450px;
+  margin: auto;
+}
+
+.banner-text p {
+  color: black;
+  font-size: 20px;
+  padding: 1em;
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  margin: auto;
+}
+
+.social-links i {
+  color: black;
+  font-size: 1em;
+  padding: 8px;
+}
+
+.projects-grid {
+  display: flex;
+}
+
+.contact-body {
+  margin: auto;
+  background: black;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+
+.contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  color: white;
+  margin: 20px;
+}
+
+.contact-grid h2 {
+  font-family: 'Anthon', sans-serif;
+}
+
+.contact-grid p {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+  color: white;
+}
+
+.contact-grid hr {
+  border-top: 1px snow black;
+  width: 50%;
+  margin: auto;
+}
+
+.contact-list i {
+  font-size: 66px;
+  padding-right: 5rem;
+  color: white;
+}
+
+/*Resume page css*/
+.resume-right-col {
+  background: black;
+  color: white;
+  padding: 2em;
+}
+
+.avatar-img {
+  padding-left: 10rem;
+  /*border-radius: 75px;*/
+}
+
+.about-grid {
+  display: flex;
+}
+
+.about-content {
+  padding-top: 5rem;
 }
